# JackLive

./: jklive.jks
app/: CMakeLists.txt  build.gradle
app/release/: jklive.apk
app/src/androidTest/java/cn/jackwhliu/jklive/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jklive.cpp
app/src/main/java/cn/jackwhliu/jklive/: LivePusher.java  MainActivity.java
app/src/main/java/cn/jackwhliu/jklive/channel/: AudioChannel.java  CameraHelper.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/jackwhliu/jklive/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
